--- a/crates/threshold-bls/Cargo.toml
+++ b/crates/threshold-bls/Cargo.toml
@@ -18,11 +18,11 @@ hkdf = "0.12.4"
 sha2 = "0.10.8"
 
 # bls12_377
-ark-bls12-377 = { version = "0.3.0" }
-ark-serialize = { version = "0.3.0", features = [ "derive" ] }
-ark-ff = { version = "0.3.0", features = [ "std" ] }
-ark-ec = { version = "0.3.0", features = [ "std" ] }
-bls-crypto = { git = "https://github.com/celo-org/bls-crypto" }
+ark-bls12-377 = { version = "0.4.0" }
+ark-serialize = { version = "0.4.2", features = [ "derive" ] }
+ark-ff = { version = "0.4.2", features = [ "std" ] }
+ark-ec = { version = "0.4.2", features = [ "std" ] }
+bls-crypto = { git = "https://github.com/sbellem/bls-crypto", rev = "70b7da1" }
 thiserror = "1.0.15"
 bincode = "1.2.1"
 
